--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-opencv-python==3.4.5.20
-numpy==1.16.2
-dlib==19.7.0
-scipy==1.3.0
-pyglet==1.4.5
-pynput==1.4.4
+numpy
+dlib
+scipy
+pyglet
+pynput
+opencv-python
